syntax = "proto3";

option go_package = "github.com/dorm-parcel-manager/dpm/common/pb";

package pb;

import "google/protobuf/timestamp.proto";
import "common.proto";

service UserService {
  rpc Hello (HelloRequest) returns (HelloResponse) {}
  rpc GetUserForAuth (GetUserForAuthRequest) returns (User) {}
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {}
}

message GetUserForAuthRequest {
  string oauth_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
}

message User {
  int32 id = 1;
  string oauth_id = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message GetUsersRequest {
  Context context = 1;
}

message GetUsersResponse {
  repeated User users = 1;
}
